--- a/meta-brands/meta-linkdroid/conf/machine/alien5.conf
+++ b/meta-brands/meta-linkdroid/conf/machine/alien5.conf
@@ -1,10 +1,10 @@
 #@TYPE: Machine
 #@NAME: 
-#@DESCRIPTION: Machine configuration for the Amiko Alien5 
+#@DESCRIPTION: Machine configuration for the Mecool K1 Pro 
 
-MACHINE_NAME = "Alien5"
+MACHINE_NAME = "K1pro"
 BRAND_OEM = "LinkDroid"
-MACHINE_BRAND = "Amiko"
+MACHINE_BRAND = "Mecool"
 
 MTD_BLACK  = "mmcblk0"
 KERNEL_FILE = "kernel.itb"
@@ -18,9 +18,9 @@ require conf/machine/include/linkdroid.inc
 require conf/machine/include/arm/arch-armv8.inc
 require conf/machine/include/soc-family.inc
 
-IMAGE_CLASSES += "sdcard_image-alien5"
+IMAGE_CLASSES += "sdcard_image-k1pro"
 SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext4"
-IMAGE_FSTYPES ?= "ext4 alien5sdimg"
+IMAGE_FSTYPES ?= "ext4 k1prosdimg"
 #IMAGE_ROOTFS_SIZE = "976562"
 IMAGE_ROOTFS_SIZE = "476562"
 IMAGE_EXTRA_SPACE = "0"
@@ -38,7 +38,7 @@ PREFERRED_VERSION_linux-libc-headers = "3.14.79"
 KERNEL_CLASSES += "aarch64-fitimage"
 #KERNEL_CLASSES += "kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
-KERNEL_DEVICETREE = "alien5.dtb"
+KERNEL_DEVICETREE = "k1pro.dtb"
 
 UBOOT_ENTRYPOINT = "0x01080000"
 UBOOT_LOADADDRESS = "0x01080000"
@@ -105,7 +105,7 @@ MACHINE_EXTRA_RRECOMMENDS += " \
 KERNEL_MODULE_AUTOLOAD += " \
     se2io_se \
     ampanel \
-    a5stb \ 
+    k1prostb \ 
     mali \
     rfcomm \
     hidp \
